# craimodels

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
craimodels/: main.py
craimodels/models/: info-models.yml
