[tool.poetry]
name = "craimodels"
version = "0.0.1"
description = "Models trained with CRAI (https://github.com/FREVA-CLINT/climatereconstructionAI)."
authors = ["Climate Informatics and Technology group at DKRZ (Deutsches Klimarechenzentrum)"]
license = "BSD 3-Clause"
readme = "README.md"

homepage = "https://github.com/climateintelligence/craimodels"
repository = "https://github.com/climateintelligence/craimodels"
documentation = "https://github.com/climateintelligence/craimodels"
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Scientific/Engineering :: Atmospheric Science',
    'License :: OSI Approved :: BSD License',
    "Operating System :: OS Independent",
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    "Programming Language :: Python :: 3.10",
    'Programming Language :: Python :: 3 :: Only',
]

[tool.poetry.dependencies]
python = ">= 3.9"
setuptools = "==59.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
